tests/neg-custom-args/no-experimental/experimental-imports.scala
import annotation.experimental

@experimental
object Object1:
  import language.experimental.namedTypeArguments
  import language.experimental.genericNumberLiterals
  import language.experimental.erasedDefinitions
  erased def f = 1

object Object2:
  import language.experimental.namedTypeArguments // error
  import language.experimental.genericNumberLiterals // error
  import language.experimental.erasedDefinitions
  erased def f = 1

@experimental
object Class1:
  import language.experimental.namedTypeArguments
  import language.experimental.genericNumberLiterals
  import language.experimental.erasedDefinitions
  erased def f = 1

object Class2:
  import language.experimental.namedTypeArguments // error
  import language.experimental.genericNumberLiterals // error
  import language.experimental.erasedDefinitions
  erased def f = 1

@experimental
def fun1 =
  import language.experimental.namedTypeArguments
  import language.experimental.genericNumberLiterals
  import language.experimental.erasedDefinitions
  erased def f = 1

def fun2 =
  import language.experimental.namedTypeArguments // error
  import language.experimental.genericNumberLiterals // error
  import language.experimental.erasedDefinitions
  erased def f = 1
